--- a/src/main/resources/static/css/product/list.css
+++ b/src/main/resources/static/css/product/list.css
@@ -1,84 +1,129 @@
 section {
 	width: 100%;
 	padding: 30px 0;
-	}
+}
 
 section #section_wrap {
 	width: 1200px;
 	margin: 0 auto;
-	}
+}
 
 
 /* WORD START */
 section #section_wrap .word {
-	text-align: center;
-	font-weight: bolder;
-	}
+	background-color: #fff;
+	padding: 20px;
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	font-size: 24px;
+	font-weight: bold;
+	color: #333;
+	margin-bottom: 20px;
+	display: flex;
+	justify-content: space-between; /* 왼쪽과 오른쪽으로 정렬 */
+	align-items: center; /* 세로 가운데 정렬 */
+}
+section #section_wrap .word .title{
+	flex: 1; /* 남은 공간을 모두 차지하도록 설정 */
+}
+section #section_wrap .total{
+	margin-left: 10px;
+}
 /* WORD END */
 
-/* BOARD LIST START */
-section #section_wrap .board_list {
-	width: 1200px;
-	margin: 0 auto;
-	}
+/* PRODUCT LIST START */
+section #section_wrap .product_list {
+	margin-top: 20px;
+}
+/* 최상위 flex 컨테이너에 대한 스타일 */
+section #section_wrap .container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
 
-section #section_wrap .board_list table {
+/* reg_date_trim 요소에 대한 스타일 */
+section #section_wrap .reg_date {
 	width: 100%;
-	border-collapse: collapse;
-	}
+}
 
-section #section_wrap .board_list table tr {
+/* reg_date_trim 요소에 대한 스타일 */
+section #section_wrap .reg_date_trim {
 	background-color: #fff;
-	}
+	padding: 20px;
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	font-size: 24px;
+	font-weight: bold;
+	color: #333;
+	margin-bottom: 20px;
+}
+.main,
+.detail {
+	display: flex;
+	/*justify-content: space-between;*/
+}
+.main > span,
+.detail > span {
+	/*display: inline-block;*/
+	/*text-align: justify;*/
+	/*flex-direction: row;*/
+	justify-content: space-between;
+}
 
-section #section_wrap .board_list table tr:nth-child(2n+1) {
-	background-color: #f2f2f2;
-	}
 
-section #section_wrap .board_list table tr th {
-	border: 1px solid #ccc;
-	padding: 10px;
-	background-color: #e3fffc;
-	}
+/* product 요소에 대한 스타일 */
+section #section_wrap .product {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 
-section #section_wrap .board_list table tr td {
-	border: 1px solid #ccc;
-	padding: 10px;
-	text-align: center;
-	}
+	border-top: 1px solid #ddd;
+	padding-top: 10px;
+	margin-top: 10px;
+}
+section #section_wrap .product div.img {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 10px;
+}
+section #section_wrap .product .info {
+	display: flex;
+	flex-direction: column;
+	margin-top: 10px;
+}
 
-section #section_wrap .board_list table tr td:nth-child(1) {
-	width: 70px;
-	}
+section #section_wrap .product .info .name{
+	margin-bottom: 30px;
+}
 
-section #section_wrap .board_list table tr td:nth-child(2) {
-	width: 100px;
-	}
+.detail {
+	display: flex;
+	flex-direction: row;
+	margin-right: 100px;
+}
 
-section #section_wrap .board_list table tr td:nth-child(3) {
-	text-align: left;
-	}
 
-section #section_wrap .board_list table tr td:nth-child(4) {
-	width: 200px;
-	}
 
-section #section_wrap .board_list table tr td:nth-child(5) {
-	width: 70px;
-	}
+/* PRODUCT LIST END */
 
-/* BOARD LIST END */
+
 
 /* page UI START */
 section #section_wrap > div.page_wrap {
 	width: 98%;
 	margin: 0 auto 50px;
 	text-align: center;
-	}
+}
 
 section #section_wrap > div.page_wrap > div.page_number {
 	display: inline-block;
-	}
+}
+
+
 
 section #section_wrap > div.page_wrap > div.page_number a {
 	width: 46px;
@@ -90,18 +135,18 @@ section #section_wrap > div.page_wrap > div.page_number a {
 	color: #3c3c3c;
 	background-color: #fff;
 	border: 1px solid #ccc;
-	}
+}
 
 section #section_wrap > div.page_wrap > div.page_number a:hover {
 	background-color: #e3e6e8;
-	}
+}
 
 section #section_wrap > div.page_wrap > div.page_number a.selectedPageNum {
 	color: #fff;
 	font-weight: bolder;
 	border: 1px solid #232f3d;
 	background-color: #232f3d;
-	}
+}
 
 section #section_wrap > div.page_wrap div.page_goto {
 	display: inline-block;
@@ -109,7 +154,7 @@ section #section_wrap > div.page_wrap div.page_goto {
 	padding: 9px 6px 5px 15px;
 	border-radius: 7px;
 	background-color: rgba(200, 216, 235, .3);
-	}
+}
 
 section #section_wrap > div.page_wrap div.page_goto > input[name='page_target_num'] {
 	width: 60px; height: 25px;
@@ -118,7 +163,7 @@ section #section_wrap > div.page_wrap div.page_goto > input[name='page_target_nu
 	border-radius: 5px;
 	text-align: center;
 	font-weight: bolder;
-	}
+}
 
 section #section_wrap > div.page_wrap div.page_goto > a {
 	padding: 3px 10px 8px;
@@ -129,26 +174,11 @@ section #section_wrap > div.page_wrap div.page_goto > a {
 	text-decoration: none;
 	color: #fff;
 	font-weight: bolder;
-	}
+}
 
 section #section_wrap > div.page_wrap div.page_goto > a:hover {
 	border: 1px solid #232f3d;
 	background-color: #232f3d;
-	}
+}
 /* page UI END */
 
-/* BOARD WRITE START */
-section #section_wrap .board_write {
-	width: 1200px;
-	margin: 3px auto;
-	text-align: right;
-	}
-
-section #section_wrap .board_write a {
-	display: inline-block;
-	padding: 3px 10px;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	margin-left: 5px;
-	}
-/* BOARD WRITE END */
