OB-81-페이지-네이션-및-검색

--- a/src/main/resources/templates/board/freeBoardListForm.html
+++ b/src/main/resources/templates/board/freeBoardListForm.html
@@ -25,7 +25,7 @@
                         <option value='3'>작성자로 검색</option>
                     </select>
                     <input type="text" id="keyword" name="keyword" placeholder="키워드를 입력해 주세요." title="키워드 입력" />
-                    <button type="button" class="bt_search" onclick="movePage(1);"><i class="fas fa-search"></i><span class="skip_info">검색</span></button>
+                    <button type="button" class="bt_search"><span class="skip_info">검색</span></button>
                 </div>
             </form>
 
