OB-85-회원가입-페이지-CSS작업

--- a/src/main/resources/static/css/user/findPasswordForm.css
+++ b/src/main/resources/static/css/user/findPasswordForm.css
@@ -1,4 +1,4 @@
-/* findIDForm.css에서 추가한 스타일 */
+/* findPasswordForm.css에서 추가한 스타일 */
 .body {
     background-color: #f2f2f2;
 }
@@ -34,19 +34,19 @@
     -webkit-background-clip: text, border;
 }
 
-.findIDForm label.findIDRadio {
+.findPasswordForm label.findPasswordRadio {
     margin-bottom: 20px;
 }
 
-.findIDRadio input[type="radio"] {
+.findPasswordRadio input[type="radio"] {
     display: flex;
 }
 
-.findIDRadio input[type='radio']:first-child {
+.findPasswordRadio input[type='radio']:first-child {
     display: none;
 }
 
-.findIDRadio input[type='radio'] + span {
+.findPasswordRadio input[type='radio'] + span {
     justify-content: space-between;
     max-width: 180px;
     min-width: 180px;
@@ -66,19 +66,19 @@
     color: rgba(62, 62, 62, 0.8);
 }
 
-.findIDRadio input[type='radio']:first-child + span:first-child {
+.findPasswordRadio input[type='radio']:first-child + span:first-child {
     margin-right: 20px;
 }
 
-.findIDRadio input[type='radio']:checked + span {
+.findPasswordRadio input[type='radio']:checked + span {
     border: 1px solid #3085d6;
     background: linear-gradient( to bottom, #0593fc, #036bb4);
     color: #fff;
     margin-bottom: 25px;
 }
 
-.findIDForm input[type="text"],
-.findIDForm select {
+.findPasswordForm input[type="text"],
+.findPasswordForm select {
     width: 95%;
     padding: 10px;
     margin-bottom: 10px;
@@ -87,7 +87,7 @@
     font-size: 1.1em;
 }
 
-.findIDForm input[type="button"] {
+.findPasswordForm input[type="button"] {
     background: linear-gradient(to bottom, #0593fc, #036bb4);
     border: none;
     box-sizing :border-box;
@@ -95,28 +95,29 @@
     font-weight: bold;
     cursor: pointer;
 }
-.findIDFormFlex > span,
-.findIDFormFlex > input,
-.findIDFormFlex > select,
-.findIDFormFlex > input[type='button']{
+.findPasswordFormFlex > span,
+.findPasswordFormFlex > input,
+.findPasswordFormFlex > select,
+.findPasswordFormFlex > input[type='button']{
     display: inline-block;
 }
-.findIDFormFlex > span {
+.findPasswordFormFlex > span {
     text-align: center;
     width: 13%;
 }
-.findIDFormFlex > input[name="name"] {
+.findPasswordFormFlex > input[name="name"],
+.findPasswordFormFlex > input[name="id"]{
     margin-top: 10px;
     width: 78%;
 }
 .cellPhone {
     margin-top: 10px;
 }
-.findIDFormFlex > select {
+.findPasswordFormFlex > select {
     width: 20%;
 }
-.findIDFormFlex > input[name="phone2"],
-.findIDFormFlex > input[name="phone3"]{
+.findPasswordFormFlex > input[name="phone2"],
+.findPasswordFormFlex > input[name="phone3"]{
     width: 16%;
 }
 input.sendBtn {
