--- a/src/main/resources/templates/include/findPasswordFormJs.html
+++ b/src/main/resources/templates/include/findPasswordFormJs.html
@@ -31,7 +31,7 @@
             isStudent = 0;
         });
 
-        $("#sectionWrap div.findPasswordForm input[value='인증번호 발송']").on('click', function () {
+        $("#sectionWrap div.findPasswordForm input[value='인증번호']").on('click', function () {
             console.log("인증번호 발송 CLICK HANDLER!!!");
 
             let form = document.findPasswordForm;
@@ -57,8 +57,8 @@
 
         });
 
-        $("#sectionWrap div.findPasswordForm input[value='비밀번호 찾기']").on('click', function () {
-            console.log("비밀번호 찾기 CLICK HANDLER!!!");
+        $("#sectionWrap div.findPasswordForm input[value='확인']").on('click', function () {
+            console.log("확인 CLICK HANDLER!!!");
 
             findPasswordConfirm();
         });
