--- a/src/main/resources/static/css/headerFooter.css
+++ b/src/main/resources/static/css/headerFooter.css
@@ -1,3 +1,17 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+#wrap {
+    min-height: 100%;
+    position: relative;
+}
+#sectionWrap {
+    margin-top: 100px;
+    padding-bottom: 60px; /* footer의 높이 */
+}
+
 #headerWrap {
     width: 100%;
     background-color: white;
@@ -118,10 +132,10 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 30px;
-    line-height: 30px;
+    height: 60px;
+    line-height: 60px;
     background-color: #333; /* 배경색 변경 */
     color: white; /* 텍스트 색상 변경 */
     text-align: center;
-    padding: 10px 0;
+    /*padding: 10px 0;*/
 }
