--- a/src/main/resources/templates/board/modifyContentForm.html
+++ b/src/main/resources/templates/board/modifyContentForm.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title th:replace="~{/include/title.html::title}"></title>
 
-<!--  <link rel="stylesheet" th:href="@{/css/common.css}">-->
-  <link rel="stylesheet" th:href="@{/css/writeContentForm.css}">
+  <link rel="stylesheet" th:href="@{/css/common.css}">
+  <link rel="stylesheet" th:href="@{/css/board/writeContentForm.css}">
 
 <!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
   <script src="/ckeditor5-39.0.1-q2hcooty1ujs/build/ckeditor.js"></script>
