--- a/src/main/resources/templates/board/writeContentForm.html
+++ b/src/main/resources/templates/board/writeContentForm.html
@@ -5,7 +5,7 @@
   <title th:replace="~{/include/title.html::title}"></title>
 
   <link rel="stylesheet" th:href="@{/css/common.css}">
-  <link rel="stylesheet" th:href="@{/css/writeContentForm.css}">
+  <link rel="stylesheet" th:href="@{/css/board/writeContentForm.css}">
 <!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
 
 <!--  <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>-->
