--- a/src/main/resources/templates/user/member/findPasswordForm.html
+++ b/src/main/resources/templates/user/member/findPasswordForm.html
@@ -5,60 +5,79 @@
 
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+    <link rel="stylesheet" th:href="@{/css/user/findPasswordForm.css}">
 
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/findPasswordFormJs.html::js}" type="text/javascript"></script>
 
-
 </head>
 <body>
-
-<header th:replace="~{/include/headerNavFooter.html::header}">
-</header>
-
-
-<nav th:replace="~{/include/headerNavFooter.html::nav}">
-
-</nav>
-
-<section>
-    <div id="sectionWrap">
-        <div class="word">
-            비밀번호 찾기
-        </div>
-        <div class="findPasswordForm">
-            <form th:action="@{/user/member/findPasswordConfirm}" method="POST" name="findPasswordForm">
-                <label><input type="radio" name="student" value="학생" checked="checked">학생</label>&nbsp;
-                <label><input type="radio" name="parents" value="학부모">학부모</label><br>
-                이름
-                <input type="text" name="name" placeholder="이름을 입력하세요"><br>
-                아이디
-                <input type="text" name="id" placeholder="아이디를 입력하세요"><br>
-                핸드폰 번호
-                <select name="phone1">
-                    <option value="">---선택해주세요---</option>
-                    <option value="010">010</option>
-                    <option value="011">011</option>
-                    <option value="016">016</option>
-                    <option value="019">019</option>
-                </select>&nbsp; - &nbsp;
-                <input type="text" name="phone2" oninput="filterKey();"> &nbsp; - &nbsp;
-                <input type="text" name="phone3" oninput="filterKey();">&nbsp;
-                <span class="authInput">
-                    <input type="button" value="인증번호 발송">
-                </span>
-                    <span id="timer"></span>
+<div id="wrap">
+    <section id="sectionWrap">
+            <div class="logo">
+                <a th:href="@{/}">
+                    <img src="/imgs/no_background_logo_test.png" >
+                </a>
                 <br>
-                <input type="button" value="비밀번호 찾기">
-                <input type="reset" value="reset">
+                <div class="title">
+                    비밀번호 찾기
+                </div>
+                <br>
+                <div class="explanation">
+                    비밀번호는 가입하신 휴대전화를 통해 찾으실 수 있습니다.
+                </div>
+            </div>
+            <form id="findPasswordForm" th:action="@{/user/member/findPasswordConfirm}" method="POST" name="findPasswordForm">
+                <div class="findPasswordForm">
+                    <label class="findPasswordRadio">
+                        <input type="radio" name="student" value="학생" checked="checked">
+                        <span>학생</span>
+                    </label>
+                    <label class="findPasswordRadio">
+                        <input type="radio" name="parents" value="학부모">
+                        <span>학부모</span>
+                    </label>
+                    <br>
+                    <div class="findPasswordFormFlex">
+                        <span>NAME</span>
+                        <input type="text" name="name" placeholder="이름을 입력하세요"><br>
+                    </div>
+                    <div class="findPasswordFormFlex">
+                        <span>ID</span>
+                        <input type="text" name="id" placeholder="아이디를 입력하세요"><br>
+                    </div>
+                    <div class="findPasswordFormFlex cellPhone">
+                        <span>H.P</span>
+                        <select name="phone1">
+                            <option value="">선택</option>
+                            <option value="010">010</option>
+                            <option value="011">011</option>
+                            <option value="016">016</option>
+                            <option value="019">019</option>
+                        </select>-
+                        <input type="text" name="phone2" oninput="filterKey();">-
+                        <input type="text" name="phone3" oninput="filterKey();">
+                        <input class="sendBtn" type="button" value="인증번호">
+                    </div>
+                    <span class="authInput">
+
+                    </span>
+                    <span id="timer">
+
+                    </span>
+                    <br>
+                    <input class="confirm" type="button" value="확인">
+                </div>
+                <div class="findMember">
+                    <a th:href="@{/user/member/loginForm}">로그인</a>
+                    |
+                    <a th:href="@{/user/member/findIDForm}">아이디 찾기</a>
+                </div>
             </form>
-        </div>
-    </div>
-</section>
-
-<footer th:replace="~{/include/headerNavFooter.html::footer}">
-
-</footer>
+    </section>
+    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    </footer>
+</div>
 
 </body>
 </html>
