--- a/src/main/resources/templates/user/member/updatePasswordForm.html
+++ b/src/main/resources/templates/user/member/updatePasswordForm.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}">
+    <title th:replace="~{/include/title.html::title}"></title>
 
-    </title>
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/student/updatePasswordFormJs.html::js}" type="text/javascript"></script>
 
-
 </head>
 <body>
+    <header th:replace="~{/include/headerNavFooter.html::header}">
+    </header>
 
-<header th:replace="~{/include/headerNavFooter.html::header}">
-</header>
-
-
-<nav th:replace="~{/include/headerNavFooter.html::nav}">
-
-</nav>
+    <nav th:replace="~{/include/headerNavFooter.html::nav}">
+    </nav>
 
 <section>
     <div id = "sectionWrap">
