--- a/src/main/resources/templates/user/student/createAccountForm.html
+++ b/src/main/resources/templates/user/student/createAccountForm.html
@@ -1,108 +1,156 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}">
+    <title th:replace="~{/include/title.html::title}"></title>
 
-    </title>
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+    <link rel="stylesheet" th:href="@{/css/user/student/createAccountForm.css}">
 
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/student/createAccountFormJs.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
-
-<header th:replace="~{/include/headerNavFooter.html::header}">
-</header>
-
-
-<nav th:replace="~{/include/headerNavFooter.html::nav}">
-
-</nav>
-
-<section>
-    <div id = "sectionWrap">
-        <div class="word">
+<div id = "wrap">
+    <div class="logo">
+        <a th:href="@{/}">
+            <img src="/imgs/no_background_logo_test.png" >
+        </a>
+    </div>
+    <section id="sectionWrap">
+        <div class="title">
             회 원 가 입
         </div>
+        <br>
         <div class = "createAccountForm">
             <form th:action = "@{/user/student/createAccountConfirm}" method="post" name = "createAccountForm">
-                <input type = "text" name = "id" placeholder="아이디">
-                <input type = "button" id = "checkDuplication" value = "아이디 중복 체크"><br>
-                <p id="duplicationResult"></p>
-                <input type = "password" name = "password" placeholder="비밀번호"><br>
-                <input type = "password" name = "password_again" placeholder="비밀번호 확인"><br>
-                <input type = "text" name = "name" placeholder="이름"><br>
-                핸드폰&nbsp;
-                <input type = "hidden" name = "phone">
-                <select name = "phone1">
-                    <option value="">---선택해주세요---</option>
-                    <option value="010">010</option>
-                    <option value="011">011</option>
-                    <option value="016">016</option>
-                    <option value="019">019</option>
-                </select>&nbsp;- &nbsp;
-                <input type= "text" name = "phone2" oninput="filterKey();"> &nbsp;- &nbsp;
-                <input type = "text" name = "phone3" oninput="filterKey();"><br>
-                메일&nbsp;
-                <input type = "hidden" name = "mail">
-                <input type = "text" name = "mail1" placeholder="메일"> @
-                <select name="mail2">
-                    <option value="">---선택해주세요---</option>
-                    <option value="gmail.com">gmail.com</option>
-                    <option value="naver.com">naver.com</option>
-                    <option value="daum.net">daum.net</option>
-                </select><br>
-                우편번호<input type="text" readonly id="postcode" name="zip_code" placeholder="우편번호">
-                <input type="button" onclick="getPostcode()" value="우편번호 찾기"><br>
-                주소<input type="text" id="address" name="address" placeholder="주소"><br>
-                <input type="text" id="detailAddress" name="address_detail1" placeholder="상세주소를 입력하세요."><br>
-                <input type="text" id="extraAddress" name="address_detail2" placeholder="참고항목"><br>
-                학교 이름
-                <input type="text" name = "school_search" placeholder="학교 검색"> &nbsp;
-                <input type="button" value="검색"><br>
-                <select name = "school_no">
-                    <option value="">---선택해주세요----</option>
-                </select>
-                <input type="hidden"name="school_name"><br>
-                성별 &nbsp;
-                <select name = "gender">
-                    <option value="">---선택해주세요----</option>
-                    <option value="1">남자</option>
-                    <option value="0">여자</option>
-                </select><br>
-                학년 &nbsp;
-                <select name = "grade">
-                    <option value="">---선택해주세요----</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select><br>
-                반 &nbsp;
-                <select name = "class_no">
-                    <option value="">---선택해주세요----</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                </select><br>
-                번호 &nbsp;
-                <input type="text" name="eigen_no" oninput="filterKey();"><br>
-                <input type = "button" value="register" onclick="createAccountConfirm();">
-                <input type = "reset" value="reset">
+                <div class="id_box">
+                    <div>
+                        아이디
+                    </div>
+                    <input type = "text" name = "id" placeholder="아이디">
+                    <input type = "button" id = "checkDuplication" value = "중복 체크">
+                    <p id="duplicationResult"></p>
+                </div>
+                <div class="password_box">
+                    <div>
+                        비밀번호
+                    </div>
+                    <input type = "password" name = "password" placeholder="비밀번호"><br>
+                </div>
+                <div class="check_password_box">
+                    <div>
+                        비밀번호 확인
+                    </div>
+                    <input type = "password" name = "password_again" placeholder="비밀번호 확인"><br>
+                </div>
+                <div class="name_box">
+                    <div>
+                        이름
+                    </div>
+                    <input type = "text" name = "name" placeholder="이름"><br>
+                </div>
+                <div class="phone_box">
+                    <div>
+                        핸드폰
+                    </div>
+                    <input type = "hidden" name = "phone">
+                    <select name = "phone1">
+                        <option value="">----선택----</option>
+                        <option value="010">010</option>
+                        <option value="011">011</option>
+                        <option value="016">016</option>
+                        <option value="019">019</option>
+                    </select>-
+                    <input type= "text" name = "phone2" oninput="filterKey();">-
+                    <input type = "text" name = "phone3" oninput="filterKey();"><br>
+                </div>
+                <div class="mail_box">
+                    <div>
+                        메일
+                    </div>
+                    <input type = "hidden" name = "mail">
+                    <input type = "text" name = "mail1" placeholder="메일"> @
+                    <select name="mail2">
+                        <option value="">---선택해주세요---</option>
+                        <option value="gmail.com">gmail.com</option>
+                        <option value="naver.com">naver.com</option>
+                        <option value="daum.net">daum.net</option>
+                    </select><br>
+                </div>
+                <div class="address_box">
+                    <div>
+                        주소
+                    </div>
+                    <input type="text" readonly id="postcode" name="zip_code" placeholder="우편번호">
+                    <input type="button" onclick="getPostcode()" value="우편번호 찾기"><br>
+                    <input type="text" id="address" name="address" placeholder="주소"><br>
+                    <input type="text" id="detailAddress" name="address_detail1" placeholder="상세주소를 입력하세요."><br>
+                    <input type="text" id="extraAddress" name="address_detail2" placeholder="참고항목"><br>
+                </div>
+                <div class="school_name_box">
+                    <div>
+                        학교 이름
+                    </div>
+                    <input type="text" name = "school_search" placeholder="학교 검색"> &nbsp;
+                    <select name = "school_no">
+                        <option value="">---선택해주세요---</option>
+                    </select>
+                    <input type="button" value="검색">
+                    <input type="hidden"name="school_name">
+                </div>
+                <div class="for_flex">
+                <div class="gender_box">
+                    <div>
+                        성별
+                    </div>
+                    <select name = "gender">
+                        <option value="">-선택-</option>
+                        <option value="1">남자</option>
+                        <option value="0">여자</option>
+                    </select><br>
+                </div>
+                <div class="grade_box">
+                    <div>
+                        학년
+                    </div>
+                    <select name = "grade">
+                        <option value="">-선택-</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                    </select><br>
+                </div>
+                <div class="class_box">
+                    <div>
+                        반
+                    </div>
+                    <select name = "class_no">
+                        <option value="">-선택-</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select><br>
+                </div>
+                <div class="eigen_no_box">
+                    <div>
+                        번호
+                    </div>
+                    <input type="text" name="eigen_no" oninput="filterKey();"><br>
+                </div>
+                </div>
+                <input type = "button" value="가입하기" onclick="createAccountConfirm();">
             </form>
-
         </div>
-    </div>
-</section>
-
-<footer th:replace="~{/include/headerNavFooter.html::footer}">
-
-</footer>
+    </section>
+    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    </footer>
+</div>
 
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <script th:src="@{/js/postCodeApi.js}" type="text/javascript"></script>
-
-
 
 </body>
 </html>
