OB-81-페이지-네이션-및-검색

--- a/src/main/resources/templates/board/freeBoardListForm.html
+++ b/src/main/resources/templates/board/freeBoardListForm.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
 
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/listJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{/include/board/listJs.html::js}" type="text/javascript"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>
 </head>
 <body>
