--- a/src/main/resources/templates/notice/noticeListForm.html
+++ b/src/main/resources/templates/notice/noticeListForm.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
 
   <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-  <script th:replace="~{/include/listJs.html::js}" type="text/javascript"></script>
+  <script th:replace="~{/include/noticeListJs.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -25,7 +25,7 @@
           <option value='3'>작성자로 검색</option>
         </select>
         <input type="text" id="keyword" name="keyword" placeholder="키워드를 입력해 주세요." title="키워드 입력" />
-        <button type="button" class="bt_search" onclick="movePage(1);"><i class="fas fa-search"></i><span class="skip_info">검색</span></button>
+        <button type="button" class="bt_search" onclick="movePage(1);"><span class="skip_info">검색</span></button>
       </div>
     </form>
 
@@ -47,7 +47,7 @@
             <td>
               <a th:href="@{/notice/detailContentForm(no=${noticeDto.no})}" th:text="${noticeDto.title}"></a>
             </td>
-            <td th:text="${noticeDto.student_name}"></td>
+            <td th:text="${noticeDto.admin_name}"></td>
             <td th:text="${#strings.substring(noticeDto.reg_date, 0, 10)}"></td>
             <td th:text="${noticeDto.hit}"></td>
           </tr>
