--- a/src/main/resources/templates/user/student/createAccountForm.html
+++ b/src/main/resources/templates/user/student/createAccountForm.html
@@ -20,7 +20,7 @@
     </div>
     <section id="sectionWrap">
         <div class="title">
-            회 원 가 입
+            학생 회원가입
         </div>
         <br>
         <div class = "createAccountForm">
