--- a/src/main/resources/static/css/board/boardListForm.css
+++ b/src/main/resources/static/css/board/boardListForm.css
@@ -1,24 +1,38 @@
 /* 전체 페이지 스타일 */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
     margin: 0;
     padding: 0;
 }
-
+#wrap {
+    margin: 0 auto;
+    min-width: 1300px;
+    max-width: 1300px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
 
 /* 섹션 스타일 */
+#sectionWrap {
+    /*margin-top: 0px;*/
+    margin: 0 auto;
+    min-width: 1000px;
+}
 section {
+    /*min-width: 1300px;*/
+    /*max-width: 1300px;*/
     padding: 20px;
 }
 
 /* 검색 폼 스타일 */
 .search-container {
     display: flex;
+    justify-content: right;
     align-items: center;
     margin-bottom: 20px;
+    width: 1000px;
 }
-
 select[name="search_no"],
 input#keyword {
     padding: 10px;
@@ -28,7 +42,7 @@ input#keyword {
 }
 
 button.bt_search {
-    background-color: #007bff;
+    background: linear-gradient(to bottom, #0593fc, #036bb4);
     color: #fff;
     padding: 10px 15px;
     border: none;
@@ -39,10 +53,15 @@ button.bt_search {
 button.bt_search:hover {
     background-color: #0056b3;
 }
+.content_list {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 
 /* 컨텐츠 리스트 스타일 */
 .content_list table {
-    width: 100%;
+    width: 1000px;
     border-collapse: collapse;
     margin-top: 20px;
 }
@@ -50,19 +69,51 @@ button.bt_search:hover {
 .content_list th, .content_list td {
     border: 1px solid #ddd;
     padding: 8px;
+    text-align: center;
+}
+.content_list td:nth-child(1) {
+    width: 70px;
+    text-align: center;
+}
+.content_list tr > td:nth-child(2) {
     text-align: left;
+}
+.content_list td:nth-child(3) {
+    width: 100px;
+    text-align: center;
+}
+.content_list td:nth-child(4) {
+    width: 150px;
+    text-align: center;
+}
+.content_list td:nth-child(5) {
+    width: 80px;
+    text-align: center;
 }
 
 .content_list th {
-    background-color: #f2f2f2;
+    background-color: #f4f9ff;
 }
 
 .content_list tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #f4f9ff;
 }
 
 .content_list tr:hover {
-    background-color: #ddd;
+    background-color: rgba(250, 250, 250, 0.95);
+}
+.write_btn_container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.write_btn {
+    background: linear-gradient(to bottom, #0593fc, #036bb4);
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 /* 페이지네이션 스타일 */
