--- a/src/main/resources/templates/board/freeBoardListForm.html
+++ b/src/main/resources/templates/board/freeBoardListForm.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+    <link rel="stylesheet" th:href="@{/css/board/boardListForm.css}">
 
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/listJs.html::js}" type="text/javascript"></script>
@@ -15,10 +16,13 @@
     <header th:replace="~{/include/headerNavFooter.html::header}">
     </header>
 
-    <section>
-        <div id="section_wrap">
-            <form>
-                <div class="search-container">
+    <div id = "wrap">
+        <nav th:replace="~{/include/headerNavFooter.html::nav}">
+        </nav>
+        <section id="sectionWrap">
+<!--        <div id="section_wrap">-->
+            <div class="search-container">
+                <form>
                     <select name="search_no">
                         <option value='1'>제목으로 검색</option>
                         <option value='2'>내용으로 검색</option>
@@ -26,38 +30,38 @@
                     </select>
                     <input type="text" id="keyword" name="keyword" placeholder="키워드를 입력해 주세요." title="키워드 입력" />
                     <button type="button" class="bt_search"><span class="skip_info">검색</span></button>
-                </div>
-            </form>
+                </form>
+            </div>
 
             <div class="content_list">
                 <form>
                     <table>
                         <thead>
-                        <tr>
-                            <th>No.</th>
-                            <th>제목</th>
-                            <th>작성자</th>
-                            <th>작성일</th>
-                            <th>조회수</th>
-                        </tr>
+                            <tr>
+                                <th>No.</th>
+                                <th>제목</th>
+                                <th>작성자</th>
+                                <th>작성일</th>
+                                <th>조회수</th>
+                            </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="boardDto : ${boardDtos}">
-                            <td th:text="${boardDto.no}"></td>
-                            <td>
-                                <a th:href="@{/board/detailContentForm(no=${boardDto.no})}" th:text="${boardDto.title}"></a>
-                            </td>
-                            <td th:text="${boardDto.student_name}"></td>
-                            <td th:text="${#strings.substring(boardDto.reg_date, 0, 10)}"></td>
-                            <td th:text="${boardDto.hit}"></td>
-                        </tr>
+                            <tr th:each="boardDto : ${boardDtos}">
+                                <td th:text="${boardDto.no}"></td>
+                                <td>
+                                    <a th:href="@{/board/detailContentForm(no=${boardDto.no})}" th:text="${boardDto.title}"></a>
+                                </td>
+                                <td th:text="${boardDto.student_name}"></td>
+                                <td th:text="${#strings.substring(boardDto.reg_date, 0, 10)}"></td>
+                                <td th:text="${boardDto.hit}"></td>
+                            </tr>
                         </tbody>
                     </table>
                     <!-- LIST END -->
-
-                    <br><br><br>
-
-                    <input type="button" value="write" onclick="location.href='/board/writeContentForm';">&nbsp;&nbsp;
+                    <br>
+                    <div class="write_btn_container">
+                        <input type="button" class="write_btn" value="글 작성" onclick="location.href='/board/writeContentForm';">&nbsp;&nbsp;
+                    </div>
                 </form>
             </div>
                     <!-- PAGENATION START -->
@@ -74,8 +78,10 @@
 
             </div>
                     <!-- PAGENATION END -->
-        </div>
+<!--        </div>-->
     </section>
-
+    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    </footer>
+</div>
 </body>
 </html>
