OB-94-자유게시판-페이지네이션-노출

--- a/src/main/resources/templates/include/board/listJs.html
+++ b/src/main/resources/templates/include/board/listJs.html
@@ -41,21 +41,21 @@
     let pageMakerDto = [[${pageMakerDto}]];
 
     /* PAGE UI */
-    $('#section_wrap > div.page_wrap > div.page_number').children().remove();
+    $('#sectionWrap > div.page_wrap > div.page_number').children().remove();
 
     // 이전 페이지
     if (pageMakerDto.prev) {
-      $('#section_wrap > div.page_wrap > div.page_number').append('<a href="#none" data-pagenum="' + (pageMakerDto.startPage - 1) + '">PRE</a>');
+      $('#sectionWrap > div.page_wrap > div.page_number').append('<a href="#none" data-pagenum="' + (pageMakerDto.startPage - 1) + '">PRE</a>');
     }
 
     // 처음 페이지
     if (pageMakerDto.criteria.pageNum > 10) {
-      $('#section_wrap > div.page_wrap > div.page_number').append('<a href="#none" data-pagenum="1">1</a><span>...</span>');
+      $('#sectionWrap > div.page_wrap > div.page_number').append('<a href="#none" data-pagenum="1">1</a><span>...</span>');
     }
 
     // 페이지 넘버링
     for (let p = parseInt(pageMakerDto.startPage); p <= parseInt(pageMakerDto.endPage); p++) {
-      $('#section_wrap > div.page_wrap > div.page_number').append('<a href="#none" data-pagenum="' + p + '">' + p + '</a>');
+      $('#sectionWrap > div.page_wrap > div.page_number').append('<a href="#none" data-pagenum="' + p + '">' + p + '</a>');
     }
 
     // 페이지 하이라이트
@@ -63,11 +63,11 @@
 
     // 다음 페이지
     if (pageMakerDto.next) {
-      $('#section_wrap > div.page_wrap > div.page_number').append('<a href="#none" data-pagenum="' + (pageMakerDto.endPage + 1) + '">NEX</a>');
+      $('#sectionWrap > div.page_wrap > div.page_number').append('<a href="#none" data-pagenum="' + (pageMakerDto.endPage + 1) + '">NEX</a>');
     }
 
     // 전체 페이지
-    $('#section_wrap > div.page_wrap > div.page_goto > span.page_total_num').text(pageMakerDto.totalPage);
+    $('#sectionWrap > div.page_wrap > div.page_goto > span.page_total_num').text(pageMakerDto.totalPage);
 
   }
 
