OB-95-계정수정페이지,-공지사항-페이지-CSS작업

--- a/src/main/resources/static/css/board/boardListForm.css
+++ b/src/main/resources/static/css/board/boardListForm.css
@@ -65,7 +65,9 @@ button.bt_search:hover {
     border-collapse: collapse;
     margin-top: 20px;
 }
-
+.content_list > tbody > tr {
+    height: 35px;
+}
 .content_list th, .content_list td {
     border: 1px solid #ddd;
     padding: 8px;
