--- a/src/main/resources/templates/notice/noticeListForm.html
+++ b/src/main/resources/templates/notice/noticeListForm.html
@@ -5,6 +5,7 @@
   <title>Title</title>
   <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+  <link rel="stylesheet" th:href="@{/css/board/boardListForm.css}">
 
   <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
   <script th:replace="~{/include/noticeListJs.html::js}" type="text/javascript"></script>
@@ -15,66 +16,70 @@
 <header th:replace="~{/include/headerNavFooter.html::header}">
 </header>
 
-<section>
-  <div id="section_wrap">
-    <form>
+<div id = "wrap">
+  <nav th:replace="~{/include/headerNavFooter.html::nav}">
+  </nav>
+  <section id="sectionWrap">
       <div class="search-container">
-        <select name="search_no">
-          <option value='1'>제목으로 검색</option>
-          <option value='2'>내용으로 검색</option>
-          <option value='3'>작성자로 검색</option>
-        </select>
-        <input type="text" id="keyword" name="keyword" placeholder="키워드를 입력해 주세요." title="키워드 입력" />
-        <button type="button" class="bt_search" onclick="movePage(1);"><span class="skip_info">검색</span></button>
-      </div>
-    </form>
+         <form>
+            <select name="search_no">
+              <option value='1'>제목으로 검색</option>
+              <option value='2'>내용으로 검색</option>
+              <option value='3'>작성자로 검색</option>
+            </select>
+            <input type="text" id="keyword" name="keyword" placeholder="키워드를 입력해 주세요." title="키워드 입력" />
+            <button type="button" class="bt_search" onclick="movePage(1);"><span class="skip_info">검색</span></button>
+          </form>
+        </div>
 
-    <div class="content_list">
-      <form>
-        <table>
-          <thead>
-          <tr>
-            <th>No.</th>
-            <th>제목</th>
-            <th>작성자</th>
-            <th>작성일</th>
-            <th>조회수</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr th:each="noticeDto : ${noticeDtos}">
-            <td th:text="${noticeDto.no}"></td>
-            <td>
-              <a th:href="@{/notice/detailContentForm(no=${noticeDto.no})}" th:text="${noticeDto.title}"></a>
-            </td>
-            <td th:text="${noticeDto.admin_name}"></td>
-            <td th:text="${#strings.substring(noticeDto.reg_date, 0, 10)}"></td>
-            <td th:text="${noticeDto.hit}"></td>
-          </tr>
-          </tbody>
-        </table>
-        <!-- LIST END -->
+        <div class="content_list">
+          <form>
+            <table>
+              <thead>
+              <tr>
+                <th>No.</th>
+                <th>제목</th>
+                <th>작성자</th>
+                <th>작성일</th>
+                <th>조회수</th>
+              </tr>
+              </thead>
+              <tbody>
+                <tr th:each="noticeDto : ${noticeDtos}">
+                  <td th:text="${noticeDto.no}"></td>
+                  <td>
+                    <a th:href="@{/notice/detailContentForm(no=${noticeDto.no})}" th:text="${noticeDto.title}"></a>
+                  </td>
+                  <td th:text="${noticeDto.admin_name}"></td>
+                <td th:text="${#strings.substring(noticeDto.reg_date, 0, 10)}"></td>
+                <td th:text="${noticeDto.hit}"></td>
+              </tr>
+              </tbody>
+            </table>
+            <!-- LIST END -->
+            <br>
+            <div class="write_btn_container">
+              <input type="hidden" class="write_btn" value="글 작성" onclick="location.href='/board/writeContentForm';">&nbsp;&nbsp;
+            </div>
+          </form>
+        </div>
+        <!-- PAGENATION START -->
+        <div class="page_wrap">
 
-        <br><br><br>
+          <div class="page_number">
 
-      </form>
-    </div>
-    <!-- PAGENATION START -->
-    <div class="page_wrap">
+          </div>
 
-      <div class="page_number">
+          <div class="page_goto">
+            <input type="number" name="page_target_num">&nbsp; &#47; <span class="page_total_num"></span>
+            <a class="goto_page_btn" href="#none">Go to page</a>
+          </div>
 
-      </div>
-
-      <div class="page_goto">
-        <input type="number" name="page_target_num">&nbsp; &#47; <span class="page_total_num"></span>
-        <a class="goto_page_btn" href="#none">Go to page</a>
-      </div>
-
-    </div>
-    <!-- PAGENATION END -->
-  </div>
-</section>
-
+        </div>
+        <!-- PAGENATION END -->
+    </section>
+    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    </footer>
+</div>
 </body>
 </html>
