OB-93-외박-신청-및-내역-학생

--- a/src/main/resources/templates/board/freeBoardListForm.html
+++ b/src/main/resources/templates/board/freeBoardListForm.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:replace="~{/include/title.html::title}"></title>
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
     <link rel="stylesheet" th:href="@{/css/board/boardListForm.css}">
