--- a/src/main/resources/templates/user/student/leaveOutForm.html
+++ b/src/main/resources/templates/user/student/leaveOutForm.html
@@ -74,7 +74,7 @@
                         <input type="date" name="start_date">
                     </div>
                     <div class="btn-container">
-                        <input type = "button" value="뒤로가기" onclick="window.location.href='/user/student/leavePassList'">
+                        <input type = "button" value="신청내역" onclick="window.location.href='/user/student/leavePassList'">
                         &nbsp;
                         <input type = "button" value="신청하기" onclick="leaveOutConfirm();">
                     </div>
