OB-98-유저-페이지-숫자-필터키-문제-해결

--- a/src/main/resources/templates/user/member/findPasswordForm.html
+++ b/src/main/resources/templates/user/member/findPasswordForm.html
@@ -55,8 +55,8 @@
                             <option value="016">016</option>
                             <option value="019">019</option>
                         </select>-
-                        <input type="text" name="phone2" oninput="filterKey();">-
-                        <input type="text" name="phone3" oninput="filterKey();">
+                        <input type="text" name="phone2" oninput="filterKey(this);">-
+                        <input type="text" name="phone3" oninput="filterKey(this);">
                         <input class="sendBtn" type="button" value="인증번호">
                     </div>
                     <span class="authInput">
