--- a/src/main/resources/templates/user/parents/modifyAccountForm.html
+++ b/src/main/resources/templates/user/parents/modifyAccountForm.html
@@ -43,8 +43,8 @@
                     <option value="016">017</option>
                     <option value="019">019</option>
                 </select>&nbsp;- &nbsp;
-                <input type="text" name="phone2" oninput="filterKey();"> &nbsp;- &nbsp;
-                <input type="text" name="phone3" oninput="filterKey();"><br>
+                <input type="text" name="phone2" oninput="filterKey(this);"> &nbsp;- &nbsp;
+                <input type="text" name="phone3" oninput="filterKey(this);"><br>
                 메일&nbsp;
                 <input type="hidden" name="mail">
                 <input type="text" name="mail1" placeholder="메일"> @
