--- a/src/main/resources/templates/user/parents/createAccountForm.html
+++ b/src/main/resources/templates/user/parents/createAccountForm.html
@@ -64,8 +64,8 @@
                             <option value="016">016</option>
                             <option value="019">019</option>
                         </select>-
-                        <input type= "text" name = "phone2" oninput="filterKey();">-
-                        <input type = "text" name = "phone3" oninput="filterKey();"><br>
+                        <input type= "text" name = "phone2" oninput="filterKey(this);">-
+                        <input type = "text" name = "phone3" oninput="filterKey(this);"><br>
                     </div>
                     <div class="mail_box">
                         <div>
