--- a/src/main/resources/templates/user/student/modifyAccountForm.html
+++ b/src/main/resources/templates/user/student/modifyAccountForm.html
@@ -59,8 +59,8 @@
                         <option value="016">017</option>
                         <option value="019">019</option>
                     </select>-
-                    <input type="text" name="phone2" oninput="filterKey();">-
-                    <input type="text" name="phone3" oninput="filterKey();"><br>
+                    <input type="text" name="phone2" oninput="filterKey(this);">-
+                    <input type="text" name="phone3" oninput="filterKey(this);"><br>
                 </div>
                 <div class="mail_box">
                     <div>
