--- a/src/main/resources/templates/user/parents/modifyAccountForm.html
+++ b/src/main/resources/templates/user/parents/modifyAccountForm.html
@@ -4,6 +4,9 @@
     <title th:replace="~{/include/title.html::title}">
 
     </title>
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+    <link rel="stylesheet" th:href="@{/css/user/parents/modifyAccountForm.css}">
 
     <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
@@ -15,70 +18,121 @@
 
 <header th:replace="~{/include/headerNavFooter.html::header}">
 </header>
-
-
-<nav th:replace="~{/include/headerNavFooter.html::nav}">
-
-</nav>
-
 <section>
-    <div id="sectionWrap">
-        <div class="word">
-            회 원 수 정
+    <div id="wrap">
+        <div class="logo">
+            <a th:href="@{/}">
+                <img src="/imgs/no_background_logo_test.png">
+            </a>
         </div>
-        <div class="modifyAccountForm">
-            <form th:action="@{/user/parents/modifyAccountConfirm}" method="post" name="modifyAccountForm">
-                <input type="hidden" name="no" th:value="${loginedParentsDto.no}">
-                <input type="text" name="id" th:value="${loginedParentsDto.id}" readonly disabled><br>
-                <input type="password" name="password" value="*****" readonly disabled>&nbsp;
-                <input type="button" id="updatePassword" value="비밀번호 수정" th:data-no="${loginedParentsDto.no}"> <br>
-                <input type="text" name="name" placeholder="이름" th:value="${loginedParentsDto.name}" readonly disabled><br>
-                핸드폰&nbsp;
-                <input type="hidden" name="phone">
-                <select id="phone1" name="phone1">
-                    <option value="">---선택해주세요---</option>
-                    <option value="010">010</option>
-                    <option value="011">011</option>
-                    <option value="016">016</option>
-                    <option value="016">017</option>
-                    <option value="019">019</option>
-                </select>&nbsp;- &nbsp;
-                <input type="text" name="phone2" oninput="filterKey();"> &nbsp;- &nbsp;
-                <input type="text" name="phone3" oninput="filterKey();"><br>
-                메일&nbsp;
-                <input type="hidden" name="mail">
-                <input type="text" name="mail1" placeholder="메일"> @
-                <select name="mail2">
-                    <option value="">---선택해주세요---</option>
-                    <option value="gmail.com">gmail.com</option>
-                    <option value="naver.com">naver.com</option>
-                    <option value="daum.net">daum.net</option>
-                </select><br>
-                우편번호<input type="text" readonly id="postcode" name="zip_code" th:value="${loginedParentsDto.zip_code}" placeholder="우편번호">
-                <input type="button" onclick="getPostcode()" value="우편번호 찾기"><br>
-                주소
-                <input type="text" id="address" name="address" th:value="${loginedParentsDto.address}" placeholder="주소"><br>
-                <input type="text" id="detailAddress" name="address_detail1"
-                       th:value="${loginedParentsDto.address_detail1}" placeholder="상세주소를 입력하세요."><br>
-                <input type="text" id="extraAddress" name="address_detail2"
-                       th:value="${loginedParentsDto.address_detail2}" placeholder="참고항목"><br>
-                학교 이름 &nbsp;
-                <input type="text" name="school_name" th:value="${loginedParentsDto.school_name}" readonly disabled><br>
-                학년 &nbsp;
-                <input type="text" name="student_grade" th:value="${loginedParentsDto.student_grade}" readonly disabled><br>
-                반 &nbsp;
-                <input type="text" name="student_class" th:value="${loginedParentsDto.student_class}" readonly disabled><br>
-                <input type="button" value="회원 수정" onclick="modifyAccountConfirm();">
-                <input type="reset" value="reset">
-                <br>
-                <input class="delete" type="button" value="delete" th:data-no="${loginedParentsDto.no}">
-            </form>
-
-        </div>
+        <section id="sectionWrap">
+            <div class="title">
+                학부모 회원수정
+            </div>
+            <br>
+            <div class="modifyAccountForm">
+                <form th:action="@{/user/parents/modifyAccountConfirm}" method="post" name="modifyAccountForm">
+                    <input type="hidden" name="no" th:value="${session.loginedParentsDto.no}">
+                    <div class="id_box">
+                        <div>
+                            아이디
+                        </div>
+                        <input type="text" name="id" th:value="${session.loginedParentsDto.id}" readonly disabled><br>
+                    </div>
+                    <div class="password_box">
+                        <div>
+                            비밀번호
+                        </div>
+                        <input type="password" name="password" value="*****" readonly disabled>&nbsp;
+                        <input type="button" id="updatePassword" value="비밀번호 수정"
+                               th:data-no="${session.loginedParentsDto.no}"> <br>
+                    </div>
+                    <div class="name_box">
+                        <div>
+                            이름
+                        </div>
+                        <input type="text" name="name" placeholder="이름" th:value="${session.loginedParentsDto.name}"
+                               readonly disabled><br>
+                    </div>
+                    <div class="phone_box">
+                        <div>
+                            핸드폰
+                        </div>
+                        <input type="hidden" name="phone">
+                        <select id="phone1" name="phone1">
+                            <option value="">---선택해주세요---</option>
+                            <option value="010">010</option>
+                            <option value="011">011</option>
+                            <option value="016">016</option>
+                            <option value="016">017</option>
+                            <option value="019">019</option>
+                        </select>-
+                        <input type="text" name="phone2" oninput="filterKey();">-
+                        <input type="text" name="phone3" oninput="filterKey();"><br>
+                    </div>
+                    <div class="mail_box">
+                        <div>
+                            메일
+                        </div>
+                        <input type="hidden" name="mail">
+                        <input type="text" name="mail1" placeholder="메일"> @
+                        <select name="mail2">
+                            <option value="">---선택해주세요---</option>
+                            <option value="gmail.com">gmail.com</option>
+                            <option value="naver.com">naver.com</option>
+                            <option value="daum.net">daum.net</option>
+                        </select><br>
+                    </div>
+                    <div class="address_box">
+                        <div>
+                            주소
+                        </div>
+                        <input type="text" readonly id="postcode" name="zip_code"
+                               th:value="${session.loginedParentsDto.zip_code}" placeholder="우편번호">
+                        <input type="button" onclick="getPostcode()" value="우편번호 찾기"><br>
+                        <input type="text" id="address" name="address" th:value="${session.loginedParentsDto.address}"
+                               placeholder="주소"><br>
+                        <input type="text" id="detailAddress" name="address_detail1"
+                               th:value="${session.loginedParentsDto.address_detail1}" placeholder="상세주소를 입력하세요."><br>
+                        <input type="text" id="extraAddress" name="address_detail2"
+                               th:value="${session.loginedParentsDto.address_detail2}" placeholder="참고항목"><br>
+                    </div>
+                    <div class="school_name_box">
+                        <div>
+                            학교 이름
+                        </div>
+                        <input type="text" name="school_name" th:value="${session.loginedParentsDto.school_name}"
+                               readonly disabled><br>
+                    </div>
+                    <div class="for_flex">
+                        <div class="grade_box">
+                            <div>
+                                학년
+                            </div>
+                            <input type="text" name="grade" th:value="${session.loginedParentsDto.student_grade}"
+                                   readonly disabled><br>
+                        </div>
+                        <div class="class_box">
+                            <div>
+                                반
+                            </div>
+                            <input type="text" name="class_no" th:value="${session.loginedParentsDto.student_class}"
+                                   readonly disabled><br>
+                        </div>
+                    </div>
+                    <div class="btn_container">
+                        <input type="button" value="회원 수정" onclick="modifyAccountConfirm();">
+                        <br>
+                        <input class="delete" type="button" value="계정 삭제" th:data-no="${session.loginedParentsDto.no}">
+                    </div>
+                    <br>
+                </form>
+            </div>
+        </section>
+        <footer th:replace="~{/include/headerNavFooter.html::footer}">
+        </footer>
     </div>
 </section>
-
-<footer th:replace="~{/include/headerNavFooter.html::footer}">
 
 
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
