OB-99-게시판-관련-CSS작업

--- a/src/main/resources/templates/include/headerNavFooter.html
+++ b/src/main/resources/templates/include/headerNavFooter.html
@@ -103,7 +103,7 @@
                 <tr>
                     <td>
                         <a th:href="@{/board/freeBoardListForm}">
-                            자유게시판
+                            소통공간
                         </a>
                     </td>
                 </tr>
