--- a/src/main/resources/templates/include/product/allProduct_js.html
+++ b/src/main/resources/templates/include/product/allProduct_js.html
@@ -3,7 +3,7 @@
   $(document).ready(function(){
     console.log("allproduct_js READY!!");
 
-      let zip_code = $('#section_wrap #registProduct input[name="zip_code"]').val();
+      let zip_code = $('#sectionWrap #registProduct input[name="zip_code"]').val();
 
       ajax_allProduct(zip_code);
   });
@@ -50,10 +50,10 @@
 
                   $("#selectProduct table").children().remove();
 
-                  for (let i = 0; i < data.productDtos.length; i += 7) {
+                  for (let i = 0; i < data.productDtos.length; i += 5) {
                       let appendTag = "<tr>";
 
-                      for (let j = i; j < i + 7 && j < data.productDtos.length; j++) {
+                      for (let j = i; j < i + 5 && j < data.productDtos.length; j++) {
                           appendTag += "<td>";
                           appendTag += "<a href='#none' class='add_product' data-product-name='" + data.productDtos[j].product_name;
                           appendTag += "' data-product-price='" + data.productDtos[j].product_price;
