--- a/src/main/resources/templates/notice/detailNoticeForm.html
+++ b/src/main/resources/templates/notice/detailNoticeForm.html
@@ -10,10 +10,9 @@
   <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
 
   <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-  <script th:replace="~{/include/board/replyJs.html::js}" type="text/javascript"></script>
-  <script th:src="@{/js/board/modifyContentConfirm.js}" type="text/javascript"></script>
+  <script th:src="@{/js/board/modifyNoticeConfirm.js}" type="text/javascript"></script>
 
-<!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
+  <!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
 
 </head>
 <body>
@@ -32,29 +31,29 @@
     </div>
 
     <div class="content_list">
-      <form th:action="@{/board/modifyContentForm}" name="detailContentForm" method="post">
-        <input type="hidden" name="board_no" th:value="${boardAndReplyMap.boardDto.no}">
-        <input type="hidden" name="student_no" th:value="${boardAndReplyMap.boardDto.student_no}">
+      <form th:action="@{/notice/modifyContentForm}" name="detailContentForm" method="post">
+        <input type="hidden" name="board_no" th:value="${noticeAndFilesMap.noticeDto.no}">
+        <input type="hidden" name="admin_no" th:value="${noticeAndFilesMap.noticeDto.admin_no}">
 
         <span>글번호</span> &nbsp;
-        <span th:text="${boardAndReplyMap.boardDto.no}"></span>&nbsp;
+        <span th:text="${noticeAndFilesMap.noticeDto.no}"></span>&nbsp;
         <span>작성일</span> &nbsp;
-        <span th:text="${#strings.substring(boardAndReplyMap.boardDto.reg_date, 0, 10)}"></span>
+        <span th:text="${#strings.substring(noticeAndFilesMap.noticeDto.reg_date, 0, 10)}"></span>
         <span> | 수정일</span> &nbsp;
-        <span th:text="${#strings.substring(boardAndReplyMap.boardDto.mod_date, 0, 10)}"></span>
+        <span th:text="${#strings.substring(noticeAndFilesMap.noticeDto.mod_date, 0, 10)}"></span>
         <span> | 작성자</span> &nbsp;
-        <span th:text="${boardAndReplyMap.boardDto.student_name}"></span>&nbsp;
+        <span th:text="${noticeAndFilesMap.noticeDto.admin_name}"></span>&nbsp;
         <span> | 조회수</span> &nbsp;
-        <span th:text="${boardAndReplyMap.boardDto.hit}"></span>
+        <span th:text="${noticeAndFilesMap.noticeDto.hit}"></span>
         <hr>
-        <div th:utext="${boardAndReplyMap.boardDto.title}"></div>
+        <div th:utext="${noticeAndFilesMap.noticeDto.title}"></div>
         <hr>
         <br>
-        <div th:utext="${boardAndReplyMap.boardDto.content}"></div>
+        <div th:utext="${noticeAndFilesMap.noticeDto.content}"></div>
         <div class="upload_file_list">
-          <ul th:each="uploadedFile : ${boardAndReplyMap.uploadedFiles}">
+          <ul th:each="uploadedFile : ${noticeAndFilesMap.uploadedFiles}">
             <input type="hidden" name="board_attach_file" th:value="${uploadedFile.board_attach_file}">
-            <a th:href="@{/download(file=${uploadedFile.board_attach_file}, student_no=${boardAndReplyMap.boardDto.student_no})}"
+            <a th:href="@{/download(file=${uploadedFile.board_attach_file}, admin_no=${noticeDto.admin_no})}"
                th:download="${uploadedFile.ori_file_name}">
               <li th:text="${uploadedFile.ori_file_name}"></li>
             </a>
@@ -65,24 +64,11 @@
             <button type="button" class="btn" id="likebtn" th:classappend="${ltlike == 1} ? 'btn-danger' : 'btn-light'">좋아요</button>
             <input type="hidden" id="likecheck" th:value="${ltlike}" />
           </td>
-          <input type="submit" value="수정" th:if="${session.loginedStudentDto.no==boardAndReplyMap.boardDto.student_no}">
+          <input type="submit" value="수정" th:if="${session.loginedMemberDto.no==noticeAndFilesMap.noticeDto.admin_no}">
           <input type="submit" value="삭제" onclick="deleteContentConfirm()">
           <input type="button" value="취소" onclick="location.href='/board/freeBoardListForm';">
         </div>
       </form>
-    </div>
-    <div class="write_reply_container">
-      <input type="text" name="comment" value="">
-      <input type="button" value="작성">
-    </div>
-    <div class="reply_list">
-      <ul th:each="replyDto : ${boardAndReplyMap.replyDtos}">
-        <li th:text="${replyDto.student_name}"></li>
-        <a href="#none"><span>대댓글</span></a>
-        <a href="#none"><span>좋아요</span></a>
-        <li th:text="${replyDto.comment}"></li>
-        <li th:text="${#strings.substring(replyDto.mod_date, 0, 10)}"></li>
-      </ul>
     </div>
   </div>
 
@@ -122,9 +108,9 @@
       writePost(editor);
     })
   })
-  .error(error => {
-    console.log(error);
-  })
+          .error(error => {
+            console.log(error);
+          })
 </script>
 <style>
   .ck-editor__editable { height: 400px; }
