--- a/src/main/resources/templates/product/paymentHistory.html
+++ b/src/main/resources/templates/product/paymentHistory.html
@@ -6,7 +6,7 @@
   <title>Title</title>
   <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
   <link rel="stylesheet" th:href="@{/css/home.css}">
-  <link rel="stylesheet" th:href="@{/css/product/home.css}">
+  <link rel="stylesheet" th:href="@{/css/product/mySchoolProductForm.css}">
   <link rel="stylesheet" th:href="@{/css/product/list.css}">
 
   <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
