OB-97-학생-학부모-로그인-인터셉터

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -19,19 +19,13 @@
                     <div class="notice-container">
                         <h2>Notice</h2>
                     </div>
-                    <div class="timetable-container">
-                        <h2>Timetable</h2>
+                    <div class="board-container">
+                        <h2>Free Board</h2>
                     </div>
-                </div>
-                <div class="ad-container">
-                    <h2>광고 광고 광고 광고</h2>
                 </div>
                 <div class="flex">
-                    <div class="eng-word-container">
-                        <h2>English Word</h2>
-                    </div>
-                    <div class="menu-container">
-                        <h2>Menu</h2>
+                    <div class="leave-pass-container">
+                        <h2>LeavePass List</h2>
                     </div>
                 </div>
             </div>
