--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -30,9 +30,8 @@ body {
 }
 
 .notice-container,
-.eng-word-container {
+.leave-pass-container {
     margin: 10px 10px;
-    /*padding: auto;*/
     min-width: 370px;
     max-width: 370px;
     min-height: 250px;
@@ -42,9 +41,11 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
 }
+.leave-pass-container{
 
-.timetable-container,
-.menu-container {
+}
+
+.board-container {
     margin: 10px 10px;
     /*padding: auto;*/
     min-width: 530px;
@@ -57,22 +58,6 @@ body {
     text-align: center;
 }
 
-.ad-container {
-    margin: 10px 10px;
-    /*padding: auto;*/
-    min-width: 920px;
-    max-width: 920px;
-    min-height: 130px;
-    max-height: 130px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
-}
-
-.ad-container > h2 {
-    margin: 0 auto;
-}
 
 .login-container {
     margin: 10px 10px;
