--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title th:replace="~{/include/title.html::title}"></title>
+    <title>Title</title>
+
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
     <link rel="stylesheet" th:href="@{/css/home.css}">
@@ -19,13 +20,16 @@
                     <div class="notice-container">
                         <h2>Notice</h2>
                     </div>
-                    <div class="board-container">
-                        <h2>Free Board</h2>
+                    <div class="timetable-container">
+                        <h2>Timetable</h2>
                     </div>
                 </div>
                 <div class="flex">
-                    <div class="leave-pass-container">
-                        <h2>LeavePass List</h2>
+                    <div class="eng-word-container">
+                        <h2>English Word</h2>
+                    </div>
+                    <div class="menu-container">
+                        <h2>Menu</h2>
                     </div>
                 </div>
             </div>
@@ -66,6 +70,8 @@
                     <a th:href="@{/product/paymentHistory}">결제 내역</a>
                 </div>
             </div>
+
+
         </div>
     </section>
 <!--    <div class="wrap" th:if="${session.loginedStudentDto == null}">-->
