--- a/src/main/resources/templates/board/detailContentForm.html
+++ b/src/main/resources/templates/board/detailContentForm.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
   <link rel="stylesheet" th:href="@{/ckeditor/contents.css}">
-  <link rel="stylesheet" th:href="@{/css/content_write_form.css}">
+  <link rel="stylesheet" th:href="@{/css/board/boardDetailForm.css}">
 
   <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
   <script th:replace="~{/include/board/replyJs.html::js}" type="text/javascript"></script>
