--- a/src/main/resources/templates/notice/detailNoticeForm.html
+++ b/src/main/resources/templates/notice/detailNoticeForm.html
@@ -5,15 +5,16 @@
   <title th:replace="~{/include/title.html::title}"></title>
 
   <link rel="stylesheet" th:href="@{/css/common.css}">
-  <link rel="stylesheet" th:href="@{/ckeditor/contents.css}">
-  <link rel="stylesheet" th:href="@{/css/content_write_form.css}">
   <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+  <!--  <link rel="stylesheet" th:href="@{/ckeditor/contents.css}">-->
+  <link rel="stylesheet" th:href="@{/css/notice/noticeDetailForm.css}">
 
+  <script src="/ckeditor5-39.0.1-q2hcooty1ujs/build/ckeditor.js"></script>
   <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
   <script th:replace="~{/include/board/replyJs.html::js}" type="text/javascript"></script>
   <script th:src="@{/js/board/modifyContentConfirm.js}" type="text/javascript"></script>
 
-<!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
+  <!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
 
 </head>
 <body>
@@ -21,114 +22,81 @@
 <header th:replace="~{/include/headerNavFooter.html::header}">
 </header>
 
-<section>
-
-  <div id="section_wrap">
-
-    <div class="word">
-
-      <h3>DETAIL CONTENT PAGE</h3>
-
+<div id="wrap">
+  <nav th:replace="~{/include/headerNavFooter.html::nav}">
+  </nav>
+  <section id="sectionWrap">
+    <div class="title">
+      <h3>소통 공간</h3>
     </div>
-
     <div class="content_list">
       <form th:action="@{/board/modifyContentForm}" name="detailContentForm" method="post">
-        <input type="hidden" name="board_no" th:value="${boardAndReplyMap.boardDto.no}">
-        <input type="hidden" name="student_no" th:value="${boardAndReplyMap.boardDto.student_no}">
-
+        <input type="hidden" name="board_no" th:value="${noticeAndReplyMap.noticeDto.no}">
+        <input type="hidden" name="admin_no" th:value="${noticeAndReplyMap.noticeDto.admin_no}">
         <span>글번호</span> &nbsp;
-        <span th:text="${boardAndReplyMap.boardDto.no}"></span>&nbsp;
+        <span th:text="${noticeAndReplyMap.noticeDto.no}"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <span>작성일</span> &nbsp;
-        <span th:text="${#strings.substring(boardAndReplyMap.boardDto.reg_date, 0, 10)}"></span>
+        <span th:text="${#strings.substring(noticeAndReplyMap.noticeDto.reg_date, 0, 10)}"></span>
         <span> | 수정일</span> &nbsp;
-        <span th:text="${#strings.substring(boardAndReplyMap.boardDto.mod_date, 0, 10)}"></span>
+        <span th:text="${#strings.substring(noticeAndReplyMap.noticeDto.mod_date, 0, 10)}"></span>
         <span> | 작성자</span> &nbsp;
-        <span th:text="${boardAndReplyMap.boardDto.student_name}"></span>&nbsp;
+        <span th:text="${noticeAndReplyMap.noticeDto.admin_name}"></span>&nbsp;
         <span> | 조회수</span> &nbsp;
-        <span th:text="${boardAndReplyMap.boardDto.hit}"></span>
+        <span th:text="${noticeAndReplyMap.noticeDto.hit}"></span>
         <hr>
-        <div th:utext="${boardAndReplyMap.boardDto.title}"></div>
+        <div class="content_title" th:utext="${noticeAndReplyMap.noticeDto.title}"></div>
         <hr>
         <br>
-        <div th:utext="${boardAndReplyMap.boardDto.content}"></div>
+        <div class="content_text" th:utext="${noticeAndReplyMap.noticeDto.content}"></div>
         <div class="upload_file_list">
-          <ul th:each="uploadedFile : ${boardAndReplyMap.uploadedFiles}">
+          <ul th:each="uploadedFile : ${noticeAndReplyMap.uploadedFiles}">
             <input type="hidden" name="board_attach_file" th:value="${uploadedFile.board_attach_file}">
-            <a th:href="@{/download(file=${uploadedFile.board_attach_file}, student_no=${boardAndReplyMap.boardDto.student_no})}"
+            <a th:href="@{/download(file=${uploadedFile.board_attach_file}, admin_no=${noticeAndReplyMap.noticeDto.admin_no})}"
                th:download="${uploadedFile.ori_file_name}">
               <li th:text="${uploadedFile.ori_file_name}"></li>
             </a>
           </ul>
         </div>
+        <hr>
+        <br>
         <div class="button-container">
-          <td id="like">
-            <button type="button" class="btn" id="likebtn" th:classappend="${ltlike == 1} ? 'btn-danger' : 'btn-light'">좋아요</button>
-            <input type="hidden" id="likecheck" th:value="${ltlike}" />
-          </td>
-          <input type="submit" value="수정" th:if="${session.loginedStudentDto.no==boardAndReplyMap.boardDto.student_no}">
-          <input type="submit" value="삭제" onclick="deleteContentConfirm()">
-          <input type="button" value="취소" onclick="location.href='/board/freeBoardListForm';">
         </div>
       </form>
     </div>
-    <div class="write_reply_container">
-      <input type="text" name="comment" value="">
-      <input type="button" value="작성">
-    </div>
-    <div class="reply_list">
-      <ul th:each="replyDto : ${boardAndReplyMap.replyDtos}">
-        <li th:text="${replyDto.student_name}"></li>
-        <a href="#none"><span>대댓글</span></a>
-        <a href="#none"><span>좋아요</span></a>
-        <li th:text="${replyDto.comment}"></li>
-        <li th:text="${#strings.substring(replyDto.mod_date, 0, 10)}"></li>
-      </ul>
-    </div>
-  </div>
+  </section>
+</div>
 
-</section>
-
-<script src="/webjars/ckeditor/4.16.1/standard/ckeditor.js"></script>
 <!--  CK Editor START-->
 <script>
   ClassicEditor.create(document.querySelector('#editor'),{
     toolbar: [
       'exportPdf', 'exportWord', '|',
       'heading', '|',
-      'alignment',
-      'bold',
-      'italic',
-      'link',
-      'fontSize',
-      'highlight',
-      'strikethrough',
-      'underline',
-      // 'blockQuote',
-      '-', // break point
-      'imageUpload',
-      'imageStyle:full',
-      'insertTable',
-      'fontColor',
-      'fontBackgroundColor',
-      'undo',
-      'redo',
+      'alignment', 'bold', 'italic', 'underline', 'fontSize', '|',
+      'fontColor', 'fontBackgroundColor', 'highlight', '|',
+      'imageUpload', 'insertTable', 'link', 'undo', 'redo'
     ],
     language: "ko",
     ckfinder : {
       uploadUrl: "/image/upload"
     }
-  }).then(editor => {
-    $('#submitBtn').click(function () {
-      writePost(editor);
-    })
   })
-  .error(error => {
-    console.log(error);
-  })
+  // .then(editor => {
+  //   ('#submitBtn').click(function () {
+  //     writePost(editor);
+  //   })
+  // })
+  // .error(error => {
+  //   console.log(error);
+  // })
 </script>
 <style>
-  .ck-editor__editable { height: 400px; }
-  .ck-content { font-size: 13px; }
+  .ck-editor__editable {
+    height: 600px;
+  }
+  .ck-content {
+    font-size: 13px;
+  }
 </style>
 <!--CK Editor END-->
 
